[package]
name = "advent"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.release]
debug = 1

[dependencies]
anyhow = "1.0"
nom = "7.1"
dhat = "0.3"
regex = "1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[dev-dependencies]
criterion = "0.4"

[[bench]]
name = "bench"
harness = false

[dependencies.common]
path = "../common"

[features]
dhat-heap = []
