[package]
name = "aoc-dl"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "*"
chrono = "*"
clap = { version = "4.0", features = ["derive"] }
handlebars = "4.3.5"
reqwest = { version = "*", features = ["blocking", "cookies"] }
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "*"
serde_json = "*"
shellexpand = "3.0"
tokio = { version = "*", features = ["full"] }
